--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build_": "astro check && astro build",
+    "build": "astro build --remote",
     "preview": "astro preview",
     "astro": "astro"
   },
